class Pantalla {
  int posicion;
  Frame[] pantalla = new Frame[2];

  public Frame generarFrame() {
    Frame frame = new Frame(21);

    for (int i = 0; i < 21; i++) {
      int randomNumber = (int) (Math.random() * 4);
      frame.modificarPixel(i, randomNumber);
    }

    return frame;

  }

  public void addFrame(int posicion) {
    pantalla[posicion] = generarFrame();
  }

  public void mostrarFrame(int posicion) {
    pantalla[posicion].imprimir();
  }

  public void modificarPixel(int frame, int pos, int nuevoValor) {
    pantalla[frame].modificarPixel(pos, nuevoValor);
  }
}
