public class Pixel {

  private int dato;

  public int obtenerDato() {
    return dato;
  }

  public void setDato(int valor) {
    this.dato = valor;
  }

}
